--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "flatted": "^2.0.2",
+    "google-auth-library": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.1.0",
     "sequelize": "^5.21.7",
